--- a/www.ondeck.com/index.html
+++ b/www.ondeck.com/index.html
@@ -697,7 +697,7 @@ img.emoji {
 </ul>				</nav>
 			
 							<nav class="utility-nav" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement" aria-label="Secondary">
-					<ul id="menu-secondary-navigation" class="menu"><li id="menu-item-165802" class="svg-lock odo-sign-in-btn menu-item menu-item-type-custom menu-item-object-custom menu-item-165802 menu-item"><a target="_blank" href="https://online.ondeck.com/login" id="sign-in-click">Sign In</a></li>
+					<ul id="menu-secondary-navigation" class="menu"><li id="menu-item-165802" class="svg-lock odo-sign-in-btn menu-item menu-item-type-custom menu-item-object-custom menu-item-165802 menu-item"><a target="_blank" href="#" id="sign-in-click">Sign In</a></li>
 <li id="menu-item-165817" class="svg-phone menu-item menu-item-type-custom menu-item-object-custom menu-item-165817 menu-item"><a href="tel:8882694246">(888) 269-4246</a></li>
 <li id="menu-item-165822" class="button odo-apply-now-btn menu-item menu-item-type-custom menu-item-object-custom menu-item-165822 menu-item"><a target="_blank" href="https://online.ondeck.com/" id="apply-now-header">Apply Now</a></li>
 </ul>				</nav>
