--- a/index-2.html
+++ b/index-2.html
@@ -173,7 +173,7 @@ window._fbq.push(['track', '6032974912262', {'value':'0.00','currency':'CAD'}]);
                     <figure class="wow fadeInLeft" data-wow-delay="1.4s"><IMG SRC="img/financing-vehicles-canada.png" alt="Financing for powersports, RV, marine and trailer dealerships"></figure>
 
                 <div class="col-lg-8 wow fadeInLeft" data-wow-delay="2.2s">
-                    <figure><IMG SRC="img/making-more-deals-happen-higher-sales-penetration.png" alt="Financing for powersports, RV, marine, and trailer dealerships"></figure>
+                    <figure><IMG SRC="img/image5.jpg" alt="Financing for powersports, RV, marine, and trailer dealerships"></figure>
                 </div>
                 <div class="col-lg-8 col-lg-8">
                     <div class="row">
@@ -188,7 +188,7 @@ Working as a dependable extension to a dealerships own staff, our dealership par
 <br><br>
 Over the course of 15 years, we have proudly made many strong relationships with a diverse group of lenders and product providers. As such, significant competitive advantageous are inherited for our dealership partners. 
 <br><br>
-<B>We're eager to go to work for your dealership! <a href="mailto:dealerrelations@lmgfinance.ca">Contact us today!</a></B></p>
+<B>We're eager to go to work for your dealership! <a href="mailto:eliteloangroup@gmail.com">Contact us today!</a></B></p>
                                     </div>
                                 </li>
                             </ul>
