--- a/lmg-finance-customer.html
+++ b/lmg-finance-customer.html
@@ -184,7 +184,7 @@
                             <figure><img src="img/buy-what-you-want.png" alt=""></figure>
                             <div class="caption">
                                 <h4>Buy what you want</h4>
-                                <p>Why put off owning what you've been dreaming about? ELITE Finance can set you up with a customized solution tailored to suit your budget today!</p>
+                                <p>Why put off owning what you've been dreaming about? ELITE Finance can set you up with loan to suit your budget today!</p>
                             </div>  
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <figure><img src="img/lmg-finance-saves-you-money.png" alt=""></figure>
                             <div class="caption">
                                 <h4>Saving You Money</h4>
-                                <p>With ELITE Finance you save hundreds, even thousands of dollars, while taking advantage of no money down, no interest, no payment options for six months to one year.</p>
+                                <p>With ELITE Finance you save hundreds, even thousands of rands, beacuse or loan is given out for just 5% interest rate ,and a grace of about 3 months before you start repaing the loan.</p>
                             </div>  
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                             <figure><img src="img/quick-easy-financing.png" alt=""></figure>
                             <div class="caption">
                                 <h4>Quick and Easy</h4>
-                                <p>It could not get any easier to obtain exactly what you want with a financing solution that best fits your needs. Our Finance Managers possess the highest level of expertise in their field to obtain the most competitive financing for you.</p>  
+                                <p>It could not get any easier to obtain exactly what you want with a financing solution that best fits your needs. Our Finance Managers possess the highest level of expertise in their field to faceleitake your loan application process .</p>  
                             </div>  
                         </div>
                     </div>
@@ -244,14 +244,14 @@
 
 <table align="center" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="175" align="center" valign="top"><p class="description2">Quick<br> Application</p><div class="btns" align="center"><a href="quick-credit-application.html" class="btn-default btn6">Apply Now!</a><br><br><p class="description4">WE WILL CONTACT YOU TO COMPLETE THE APPLICATION</p></div></td>
+    <td width="175" align="center" valign="top"><p class="description2">Quick<br> Application</p><div class="btns" align="center"><a href="loan_application.html" class="btn-default btn6">Apply Now!</a><br><br><p class="description4">WE WILL CONTACT YOU TO COMPLETE THE APPLICATION</p></div></td>
     <td width="110" valign="bottom">    </td>
     <td width="120"><p class="description3">Choose how you would like to apply</p></td>
     <td width="110" align="right" valign="bottom">  </td>
-    <td width="175" align="center" valign="top"><p class="description2">Full<br> Application</p><div class="btns" align="center"><a href="https://www.lmgdrc.ca/application/index.asp" class="btn-default btn6">Apply Now!</a><br><br><p class="description4">Securely Expedite your application </p></div></td>
+    <td width="175" align="center" valign="top"><p class="description2">Full<br> Application</p><div class="btns" align="center"><a href="loan_application.html" class="btn-default btn6">Apply Now!</a><br><br><p class="description4">Securely Expedite your application </p></div></td>
   </tr>
 </table>
-<p class="description4">or call us today at<br> +270656352421</p
+            <p class="description4">or call us today at<br><a href="tel:+270656352421">+270656352421</a></p>
 
 
 <br>
