--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Over the course of 15 years, we have proudly made many strong relationships with
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
-<a target="_blank" title="Click for the Business Review of LMG Finance Inc., a Financing Consultants in Kamloops BC" href="https://www.bbb.org/mbc/business-reviews/financing-consultants/lmg-finance-in-kamloops-bc-1284248#sealclick"><img alt="Click for the BBB Business Review of this Financing Consultants in Kamloops BC" style="border: 0;" src="../seal-mbc.bbb.org/seals/blue-seal-153-100-whitetxt-lmgfinanceinc-1284248.png" /></a>
+<a target="_blank" title="Click for the Business Review of LMG Finance Inc., a Financing Consultants in Kamloops BC" href="https://www.facebook.com"><img alt="Click to view eligibility status on our facebook page" style="border: 0;" src="../seal-mbc.bbb.org/seals/blue-seal-153-100-whitetxt-lmgfinanceinc-1284248.png" /></a>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
                     <h9>ELITE Finance</h9><br>
