--- a/index-2.html
+++ b/index-2.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-<meta name="description" content="Elevating dealerships to new heights and boosting customer satisfaction - approval, after approval. Put LMG to work for your dealership! ">
-<meta name="keywords" content="lmg finance, best f&i in Canada, F&I manager, f&i management, low interest financing provider in Canada, financing company in Canada, best f&i outsource company in Canada, f&i training, Canada, finance broker, outsource financing, insurance, extended warranty, powersport loans, loan broker, loan agent, financing for powersports, financing for leisure, financing for powersports, atv, dirt bike, motocross, motorcycle, bike, motorbike, financing for snowmobiles, sled, financing for RV, recreational vehicle, camper, motor home, fifth wheel, 5th wheel, camper, trailer financing, best financing for travel trailers, tent trailer, horse trailer, boat financing, marine financing, aluminium boat financing, speed boat financing, pwc financing, watercraft financing, customized financing, low interest financing for dealerships, Canadian f&i outsource solution for dealerships, f&i solutions, Nunavut, Northwest Territories, Ontario, British Columbia, Alberta, Saskatchewan, Manitoba, Yukon, Nova Scotia, Prince Edward Island, New Brunswick, Newfoundland and Labrador">
+<meta name="description" content="Elevating financing to new heights and boosting customer satisfaction - approval, after approval. Put ELITE to work for your dealership! ">
+<meta name="keywords" content="Elite finance, best loan in Aouth Africa, F&I manager, f&i management, low interest financing provider in Africa, financing company in South Africa, best f&i outsource company in South Africa, f&i training, South Africa, finance broker, outsource financing, insurance, extended warranty, powersport loans, loan broker, loan agent, financing for powersports, financing for leisure, financing for powersports, atv, dirt bike, motocross, motorcycle, bike, motorbike, financing for snowmobiles, sled, financing for RV, recreational vehicle, camper, motor home, fifth wheel, 5th wheel, camper, trailer financing, best financing for travel trailers, tent trailer, horse trailer, boat financing, marine financing, aluminium boat financing, speed boat financing, pwc financing, watercraft financing, customized financing, low interest financing for dealerships, South African f&i outsource solution for dealerships, f&i solutions, Nunavut, Northwest Territories, johannesburg, British Columbia, Alberta, Saskatchewan, Manitoba, Yukon, Nova Scotia, Prince Edward Island, New Brunswick, Newfoundland and Labrador">
 <meta name="author" content="Garret Morrison">
 <meta name = "format-detection" content = "telephone=no" />
 <!--CSS-->
@@ -123,7 +123,7 @@ window._fbq.push(['track', '6032974912262', {'value':'0.00','currency':'CAD'}]);
     <header class="indent clearfix">
 		<section id="stuck_container">
 			<div class="container">
-				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a title="ELITE Finance Inc." href="index-2.html"><img src="img/logo2.png" alt="LMG Finance - Canada's Leading F&I Outsource Company"></a></h1>
+				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a title="ELITE Finance Inc." href="index-2.html"><img src="img/logo2.png" alt="ELITE Finance - Canada's Leading F&I Outsource Company"></a></h1>
             <nav class="navbar navbar-default navbar-static-top tm_navbar clearfix" role="navigation">
                 <ul class="nav sf-menu clearfix">
                     <li class="active"><a href="index-2.html">Home</a></li>
@@ -229,7 +229,7 @@ Over the course of 15 years, we have proudly made many strong relationships with
         <div class="container">
             <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
-<a target="_blank" title="Click for the Business Review of LMG Finance Inc., a Financing Consultants in Kamloops BC" href="https://www.bbb.org/mbc/business-reviews/financing-consultants/lmg-finance-in-kamloops-bc-1284248#sealclick"><img alt="Click for the BBB Business Review of this Financing Consultants in Kamloops BC" style="border: 0;" src="../seal-mbc.bbb.org/seals/blue-seal-153-100-whitetxt-lmgfinanceinc-1284248.png" /></a>
+<a target="_blank" title="Click to view eligibility status on our facebook page" href="https://www.facebook.com"><img alt="Click to view eligibility status on our facebook page" style="border: 0;" src="../seal-mbc.bbb.org/seals/blue-seal-153-100-whitetxt-lmgfinanceinc-1284248.png" /></a>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
                     <h9>ELITE Finance</h9><br>
