--- a/loan_application.html
+++ b/loan_application.html
@@ -123,7 +123,7 @@ window._fbq.push(['track', '6032974912262', {'value':'0.00','currency':'CAD'}]);
     <header class="indent clearfix">
 		<section id="stuck_container">
 			<div class="container">
-				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a title="ELITE Finance Inc." href="index-2.html"><img src="img/logo2.png" alt="LMG Finance - Canada's Leading F&I Outsource Company"></a></h1>
+				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a title="ELITE Finance Inc." href="index-2.html"><img src="img/logo2.png" alt="ELITE Finance - Canada's Leading F&I Outsource Company"></a></h1>
             <nav class="navbar navbar-default navbar-static-top tm_navbar clearfix" role="navigation">
                 <ul class="nav sf-menu clearfix">
                     <li class="active"><a href="index-2.html">Home</a></li>
