--- a/partner-with-LMG-Finance.html
+++ b/partner-with-LMG-Finance.html
@@ -148,7 +148,7 @@
 <header class="clearfix">
 		<section id="stuck_container">
 			<div class="container">
-				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a href="index-2.html"><img src="img/logo.png" alt="LMG Finance - The Leading F&I Outsource Company"></a></h1>
+				<h1 class="navbar-brand navbar-brand_ wow fadeIn" data-wow-delay="0.2s"><a href="index-2.html"><img src="img/logo2.png" alt="ELITE Finance - The Leading F&I Outsource Company"></a></h1>
 
 			</div>
 		</section>
