--- a/lmg-finance-dealership-financing.html
+++ b/lmg-finance-dealership-financing.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.lmgfinance.ca/lmg-finance-dealership-financing.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Apr 2019 22:33:51 GMT -->
 <head>
-<title>Information for Dealerships about outsourcing their Financing (outsourced F&I) with LMG Finance</title>
+<title>Information for Dealerships about outsourcing their Financing (outsourced F&I) with ELITE Finance</title>
 <meta charset="utf-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -73,7 +73,7 @@
                     <li class="active"><a href="lmg-finance-dealership-financing.html">I'm a Dealer</a></li>
                     <li><a href="lmg-finance-customer.html">I'm a Customer</a></li>
                     <li><a href="contact-lmg-finance.html">Contact</a></li>
-                    <li><a href="https://www.lmgdrc.ca/"><strong>Partner Login</strong></a></li>
+                    <li><a href="loan_application.html"><strong>Loan Application</strong></a></li>
                 </ul>
             </nav>
 			</div>
@@ -231,7 +231,7 @@
 <img src="img/dealerlogos/kensmarine.png" alt="Ken's Marine - LMG Finance Dealership Partner">
               </div>
               <div class="item-info">
-                <p class="testimonials">“ Since we began referring clients to LMG, the feedback we have received has been absolutely terrific. The pricing that ELITE is able to obtain and the efficiency with which they work has been extremely appreciated. They've given our customers another reason to do business with us. ”</p>
+                <p class="testimonials">“ Since we began referring clients to ELITE, the feedback we have received has been absolutely terrific. The pricing that ELITE is able to obtain and the efficiency with which they work has been extremely appreciated. They've given our customers another reason to do business with us. ”</p>
                 <p class="author">- Trevor Gibson of Ken's Marine</p>
              </div>     
         
