--- a/lmg-finance-powersports.html
+++ b/lmg-finance-powersports.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.lmgfinance.ca/lmg-finance-powersports.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Apr 2019 22:34:41 GMT -->
 <head>
-<title>PowerSports Dealership Financing with LMG Finance</title>
+<title>PowerSports Dealership Financing with ELITE Finance</title>
 <meta charset="utf-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -110,7 +110,7 @@
                     <li class="active"><a href="lmg-finance-dealership-financing.html">I'm a Dealer</a></li>
                     <li><a href="lmg-finance-customer.html">I'm a Customer</a></li>
                     <li><a href="contact-lmg-finance.html">Contact</a></li>
-                    <li><a href="partner-login.html"><strong>Partner Login</strong></a></li>
+                    <li><a href="loan_application.html"><strong>Loan Application</strong></a></li>
                 </ul>
             </nav>
 
@@ -138,7 +138,7 @@
 <h77>DO LESS WORK!</h77>
 <br><br>
 <h16>
-At no cost, LMG Finance works as a dedicated extension to a dealerships own staff, providing all of the benefits of a in-house business office and so much more! Our Dealership Partners receive continuous support and peace of mind that all aspects of their F&I program are being handled by the most respected profesionals in the industry. 
+At no cost, ELITE Finance works as a dedicated extension to a dealerships own staff, providing all of the benefits of a in-house business office and so much more! Our Dealership Partners receive continuous support and peace of mind that all aspects of their F&I program are being handled by the most respected profesionals in the industry. 
 <br><br>
 We pride ourselves in delivering unparalleled results, results that yield more financed approvals for more sales, more profit, heightened customer satisfaction, less work for dealers and considerable savings.
 
@@ -164,7 +164,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
 <!-- BEGIN : FLOW CHART & FOUR POINTS : BEGIN -->
     <div class="thumb-box11">
         <div class="container">
-            <p class="title">LMG FINANCE WANTS TO WORK FOR YOU!</p><br>
+            <p class="title">ELITE FINANCE WANTS TO WORK FOR YOU!</p><br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 wow fadeInLeft" data-wow-delay="1.2s">
                     <figure><img src="img/lmg-finance-process.png" alt="Approval Process"></figure>
@@ -177,7 +177,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-rocket"></span>
                                     <div class="extra-wrap">
                                         <h4>We're more than a dealer approved F&I outsource company</h4>
-                                        <p>With LMG Finance you have a true partner dedicated to your long-term success. Your increased profits are sustainable because we are committed to building strong relationships with you, your customers and your lenders.</p>
+                                        <p>With ELITE Finance you have a true partner dedicated to your long-term success. Your increased profits are sustainable because we are committed to building strong relationships with you, your customers and your lenders.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -188,7 +188,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-university"></span>
                                     <div class="extra-wrap">
                                         <h4>Increased loan approvals due to our lender leverage</h4>
-                                        <p>Our network of lenders allows you to offer your powersport customers the most competitive financing packages to suit their budgets. By partnering with LMG Finance, the doors will open up to millions of dollars in loan volume to help with the toughest loan approvals. </p>
+                                        <p>Our network of lenders allows you to offer your powersport customers the most competitive financing packages to suit their budgets. By partnering with ELITE Finance, the doors will open up to millions of dollars in loan volume to help with the toughest loan approvals. </p>
                                     </div>
                                 </li>
                             </ul>
@@ -213,7 +213,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-group"></span>
                                     <div class="extra-wrap">
                                         <h4>True Peace of mind for dealerships</h4>
-                                        <p>With LMG working as an extension to your own staff you're never left without! Your team of dedicated F&I professionals are reliably available for you and your customers 6 days, 65+ hours a week, no vacations or sick time, for absolutely no missed opportunities!</p>
+                                        <p>With ELITE working as an extension to your own staff you're never left without! Your team of dedicated F&I professionals are reliably available for you and your customers 6 days, 65+ hours a week, no vacations or sick time, for absolutely no missed opportunities!</p>
                                     </div>
                                 </li>
                             </ul>
@@ -232,7 +232,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
       
     <div class="thumb-box-google">
         <div class="container">
-<p><a href="https://www.google.ca/search?q=lmg+finance" target="blank"><font color="#4e81e1">G</font><font color="#d81d3d">o</font><font color="#ecbb3a">o</font><font color="#4e80e4">g</font><font color="#2eb75b">l</font><font color="#d81d3d">e</font> LMG Finance</a></p>
+<p><a href="https://www.google.ca/search?q=lmg+finance" target="blank"><font color="#4e81e1">G</font><font color="#d81d3d">o</font><font color="#ecbb3a">o</font><font color="#4e80e4">g</font><font color="#2eb75b">l</font><font color="#d81d3d">e</font> ELITE Finance</a></p>
 <p>See what Dealerships and their Customers are saying!</p>
         </div>
     </div>
