--- a/lmg-finance-rv.html
+++ b/lmg-finance-rv.html
@@ -130,7 +130,7 @@
             <div class="row">
                 <p class="title wow fadeInRight" data-wow-delay="0.2s">TAKE YOUR <font color="#df3021">RV</font> DEALERSHIP TO THE NEXT LEVEL</p>
             <div class="col-lg-4 wow fadeInLeft" data-wow-delay="0.8s">
-            <br><h17>VIEW OUR SHORT VIDEO</h17><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/fNQpDhLghQs" frameborder="0" allowfullscreen></iframe><br><h7>SEE WHY MORE DEALERSHIPS ARE CHOOSING TO OUTSOURCE F&I TO LMG FINANCE. WATCH OUR VIDEO.</h7>
+            <br><h17>VIEW OUR SHORT VIDEO</h17><br><iframe width="100%" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe><br><h7>SEE WHY MORE DEALERSHIPS ARE CHOOSING TO OUTSOURCE F&I TO ELITE FINANCE. WATCH OUR VIDEO.</h7>
             </div>
 
             <div class="col-lg-8 wow fadeInRight" data-wow-delay="0.8s">
@@ -138,7 +138,7 @@
 <h77>DO LESS WORK!</h77>
 <br><br>
 <h16>
-LMG Finance handles all aspects of F&I, effectively increasing your profits while yielding more time for you to focus on selling and customer service.</li>
+ELITE Finance handles all aspects of F&I, effectively increasing your profits while yielding more time for you to focus on selling and customer service.</li>
 <br><br>
 We build relationships between your RV dealership, customers and lenders. These partnerships make us large enough to give you significant competitive advantages while being small enough to feel like family.
 <br><br>
@@ -262,7 +262,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                     <p class="title">Stop Losing Money!</p>
                     <div class="thumb-pad3">
                         <div class="thumbnail">
-                                <h16>PARTNERING WITH LMG FINANCE OPENS THE DOOR TO:
+                                <h16>PARTNERING WITH ELITE FINANCE OPENS THE DOOR TO:
                             <ul class="list1 indent">
                                 <li>HAVING AN ENTIRE TEAM OF DEDICATED F&I PROFESSIONALS PROCESSING APPLICATIONS 6 DAYS PER WEEK WITH NO SICK DAYS AND NO PAID HOLIDAYS</li>
                                 <li>MORE APPROVALS, MORE UNITS SOLD, MORE PROFIT ON EACH SALE!</li>
@@ -328,7 +328,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                             <figure><img src="img/lmg-finance-econtracts.png" alt="e-contracts with LMG Finance"></figure>
                             <div class="caption">
                                 <h4>Fast and Efficient</h4>
-                                <p>LMG Finance delivers compliant loan packages to your company electronically within minutes of their closing.<br><br><br></p>
+                                <p>ELITE Finance delivers compliant loan packages to your company electronically within minutes of their closing.<br><br><br></p>
                             </div>  
                         </div>
                     </div>
@@ -362,7 +362,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
         <div class="4">
             <div class="box" data-stellar-background-ratio="0">
         <div class="container"><br><br>
-                <p class="title">View our Deal Savers booklet <a href="LMG_Finance_Deal_Saver.pdf" target="_blank">Click Here</A></p><br><br><br><br>
+                <p class="title">View our Deal Savers booklet <a href="#" target="_blank">Click Here</A></p><br><br><br><br>
         </div>
       </div>
       </div>
@@ -378,7 +378,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
             <div class="col-lg-44 col-md-4 col-sm-4 wow fadeInUp">
                 <div class="badge">1.</div>
                 <strong>Get Ready..</strong>
-                <p>Call 1-877-806-6247 or <a href="mailto:dealerrelations@lmgfinance.ca">email</a> today to connect with a Dealer Relations representative.</p>
+                <p>Call +270656352421 or <a href="mailto:eliteloangroup@gmail.com ">email</a> today to connect with a Dealer Relations representative.</p>
             </div>
             <div class="col-lg-44 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="badge">2.</div>
@@ -406,7 +406,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <p class="title">Frequently Asked Questions</p>
             <ul class="_accodList">
                 <li>
-                    <strong><span></span>Is LMG Finance a bank?</strong>
+                    <strong><span></span>Is ELITE Finance a bank?</strong>
                     <p>LMG Finance is not a financial institution (bank), nor do we work for the bank. We work for you! We work closely with a multitude of lenders in order to garner the most competitive rates possible.</p>
                 </li>
                 <li>
@@ -419,11 +419,11 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                 </li>
                 <li>
                     <strong><span></span>What are your operating hours?</strong>
-                    <p>LMG Finance is open 60+ hours, 6 days a week, to better serve you. <BR>Monday - Saturday: 7:00am - 5:30pm PST</p>
+                    <p>ELITE Finance is open 60+ hours, 6 days a week, to better serve you. <BR>Monday - Saturday: 7:00am - 5:30pm PST</p>
                 </li>
                 <li>
                     <strong><span></span>How do I apply to become a partner?</strong>
-                    <p>Call 1-877-806-6247 or send an <a href="mailto:dealerrelations@lmgfinance.ca">email</a> to connect with a Dealer Relations representative.</p>
+                    <p>Call 1-877-806-6247 or send an <a href="mailto:eliteloangroup@gmail.com  ">email</a> to connect with a Dealer Relations representative.</p>
                 </li>
                 <li>
                     <strong><span></span>Will I be able to track my deals in real time?</strong>
@@ -431,7 +431,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                 </li>
                 <li>
                     <strong><span></span>Will my salespeople be able to track their performance?</strong>
-                    <p>Yes, through our Dealer Resource Centre, as well as with the LMG Finance mobile app.</p>
+                    <p>Yes, through our Dealer Resource Centre, as well as with the ELITE Finance mobile app.</p>
                 </li>
                 <li>
                     <strong><span></span>Will my customers have access to the latest finance promotions and credit and service protection?</strong>
@@ -453,7 +453,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <!--footer-->
 <footer>
     <div class="container">
-        <p class="wow fadeInUp">Copyright &copy; <em id="copyright-year"></em> <span>|</span>LMG Finance Inc. All Rights Reserved. <span>|</span> <a href="privacy.html">Privacy Policy</a></p>
+        <p class="wow fadeInUp">Copyright &copy; <em id="copyright-year"></em> <span>|</span>ELITE Finance Inc. All Rights Reserved. <span>|</span> <a href="privacy.html">Privacy Policy</a></p>
     </div>
   <!-- {%FOOTER_LINK} -->
 </footer>
