--- a/partner-with-LMG-Finance.html
+++ b/partner-with-LMG-Finance.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.lmgfinance.ca/partner-with-LMG-Finance.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Apr 2019 22:35:18 GMT -->
 <head>
-<title>Partnering with LMG Finance is Simple and the Benefits are Immediate!</title>
+<title>Partnering with ELITE Finance is Simple and the Benefits are Immediate!</title>
 <meta charset="utf-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -206,8 +206,8 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
-                    <h9>LMG Finance</h9><br>
-<strong>347 Victoria Street<br>Suite 201<br>Kamloops, BC<br>V2C 2A3</strong>
+ <h9>ELITE Finance</h9><br>
+<strong>33 Maraisburg Road  <br>Industria Roodepoort<br>1724<br>NCRPCP:167</strong>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-6 col-lg-offset-13">
                     <h9>Hours</h9><br>
@@ -215,8 +215,9 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-lg-offset-13">
                     <h9>Contact</h9><br>
-<strong>Toll Free Phone: 1-877-806-6247<br>Toll Free Fax: 1-877-806-6249<br>Local: 250-374-8804<br><a href="mailto:dealerrelations@lmgfinance.ca">dealerrelations@lmgfinance.ca</a></strong>
-<br><br>
+<strong>Phone:<a href="tel:+270656352421">+270656352421</a><br>Fax: <a href="tel:+270656352421">+27ELITEGROUP</a><br><a href="mailto:eliteloangroup@gmail.com">eliteloangroup@gmail.com</a></strong>
+<br>       
+
                     <ul class="follow_icon22">
                         <li><a href="https://www.facebook.com/lmgfinance" class="fa fa-facebook"></a></li>
                         <li><a href="https://www.instagram.com/lmgfinance" class="fa fa-instagram"></a></li>
