--- a/lmg-finance-trailer.html
+++ b/lmg-finance-trailer.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.lmgfinance.ca/lmg-finance-trailer.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Apr 2019 22:35:10 GMT -->
 <head>
-<title>Trailer Dealership Financing with LMG Finance</title>
+<title>Trailer Dealership Financing with ELITE Finance</title>
 <meta charset="utf-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -130,7 +130,7 @@
             <div class="row">
                 <p class="title wow fadeInRight" data-wow-delay="0.2s">TAKE YOUR <font color="#53c97d">TRAILER</font> DEALERSHIP TO THE NEXT LEVEL</p>
             <div class="col-lg-4 wow fadeInLeft" data-wow-delay="0.8s">
-            <br><h17>VIEW OUR SHORT VIDEO</h17><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/fNQpDhLghQs" frameborder="0" allowfullscreen></iframe><br><h7>SEE WHY MORE DEALERSHIPS ARE CHOOSING TO OUTSOURCE F&I TO LMG FINANCE. WATCH OUR VIDEO.</h7>
+            <br><h17>VIEW OUR SHORT VIDEO</h17><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/fNQpDhLghQs" frameborder="0" allowfullscreen></iframe><br><h7>SEE WHY MORE DEALERSHIPS ARE CHOOSING TO OUTSOURCE F&I TO ELITE FINANCE. WATCH OUR VIDEO.</h7>
             </div>
 
             <div class="col-lg-8 wow fadeInRight" data-wow-delay="0.8s">
@@ -138,7 +138,7 @@
 <h77>DO LESS WORK!</h77>
 <br><br>
 <h16>
-LMG Finance handles all aspects of F&I, effectively increasing your profits while yielding more time for you to focus on selling and customer service.</li>
+ELITE Finance handles all aspects of F&I, effectively increasing your profits while yielding more time for you to focus on selling and customer service.</li>
 <br><br>
 We build relationships between your trailer dealership, customers and lenders. These partnerships make us large enough to give you significant competitive advantages while being small enough to feel like family.
 <br><br>
@@ -156,7 +156,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
 <!-- BEGIN : FLOW CHART & FOUR POINTS : BEGIN -->
     <div class="thumb-box11">
         <div class="container">
-            <h2>LMG FINANCE WANTS TO WORK FOR YOU!</h2>
+            <h2>ELITE FINANCE WANTS TO WORK FOR YOU!</h2>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 wow fadeInLeft" data-wow-delay="1.2s">
                     <figure><img src="img/lmg-finance-process-trailer.png" alt="Our Financing Approval Process"></figure>
@@ -169,7 +169,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-rocket"></span>
                                     <div class="extra-wrap">
                                         <h4>We're more than a dealer approved F&I outsource company</h4>
-                                        <p>By partnering with LMG Finance you will gain a significant alliance with a company that is dedicated to your long-term success. Your increased profits are sustainable because we are committed to building strong relationships with you, your customers and your lenders.</p>
+                                        <p>By partnering with ELITE Finance you will gain a significant alliance with a company that is dedicated to your long-term success. Your increased profits are sustainable because we are committed to building strong relationships with you, your customers and your lenders.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -180,7 +180,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-university"></span>
                                     <div class="extra-wrap">
                                         <h4>Increased loan approvals due to our lender leverage</h4>
-                                        <p>Our network of lenders allows you to offer your trailer customers the most competitive financing packages to suit their budgets. By partnering with LMG Finance, the doors will open up to millions of dollars in loan volume to help with the toughest loan approvals. </p>
+                                        <p>Our network of lenders allows you to offer your trailer customers the most competitive financing packages to suit their budgets. By partnering with ELITE Finance, the doors will open up to millions of dollars in loan volume to help with the toughest loan approvals. </p>
                                     </div>
                                 </li>
                             </ul>
@@ -205,7 +205,7 @@ Our highly experienced Finance Managers formulate customized finance and insuran
                                     <span class="fa fa-group"></span>
                                     <div class="extra-wrap">
                                         <h4>Make More Money! Do Less Work! We Make Deals Happen!</h4>
-                                        <p>Gain an entire team of dedicated F&I professionals, 6 days per week, no sick days. LMG affiliated dealers deliver 25% more units, see 50% more approvals and earn 100% more F&I profit. Devote more of your time to sales and customer service.</p>
+                                        <p>Gain an entire team of dedicated F&I professionals, 6 days per week, no sick days. ELITE affiliated dealers deliver 25% more units, see 50% more approvals and earn 100% more F&I profit. Devote more of your time to sales and customer service.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -262,7 +262,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                     <p class="title">Stop Losing Money!</p>
                     <div class="thumb-pad3">
                         <div class="thumbnail">
-                                <h16>PARTNERING WITH LMG FINANCE OPENS THE DOOR TO:
+                                <h16>PARTNERING WITH ELITE FINANCE OPENS THE DOOR TO:
                             <ul class="list1 indent">
                                 <li>HAVING AN ENTIRE TEAM OF DEDICATED F&I PROFESSIONALS PROCESSING APPLICATIONS 6 DAYS PER WEEK WITH NO SICK DAYS AND NO PAID HOLIDAYS</li>
                                 <li>MORE APPROVALS, MORE UNITS SOLD, MORE PROFIT ON EACH SALE!</li>
@@ -327,7 +327,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                             <figure><img src="img/lmg-finance-econtracts.png" alt="e-contracts with LMG Finance"></figure>
                             <div class="caption">
                                 <h4>Fast and Efficient</h4>
-                                <p>LMG Finance delivers compliant loan packages to your company electronically within minutes of their closing.<br><br><br></p>
+                                <p>ELITE Finance delivers compliant loan packages to your company electronically within minutes of their closing.<br><br><br></p>
                             </div>  
                         </div>
                     </div>
@@ -362,7 +362,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
         <div class="4">
             <div class="box" data-stellar-background-ratio="0">
         <div class="container"><br><br>
-                <p class="title">View our Deal Savers booklet <a href="LMG_Finance_Deal_Saver.pdf" target="_blank">Click Here</A></p><br><br><br><br>
+                <p class="title">View our Deal Savers booklet <a href="#" target="_blank">Click Here</A></p><br><br><br><br>
         </div>
       </div>
       </div>
@@ -378,7 +378,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
             <div class="col-lg-44 col-md-4 col-sm-4 wow fadeInUp">
                 <div class="badge">1.</div>
                 <strong>Get Ready..</strong>
-                <p>Call 1-877-806-6247 or <a href="mailto:dealerrelations@lmgfinance.ca">email</a> today to connect with a Dealer Relations representative.</p>
+                <p>Call 1-877-806-6247 or <a href="mailto:eliteloangroup@gmail.com">email</a> today to connect with a Dealer Relations representative.</p>
             </div>
             <div class="col-lg-44 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="badge">2.</div>
@@ -403,8 +403,8 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <p class="title">Frequently Asked Questions</p>
             <ul class="_accodList">
                 <li>
-                    <strong><span></span>Is LMG Finance a bank?</strong>
-                    <p>LMG Finance is not a financial institution (bank), nor do we work for the bank. We work for you! We work closely with a multitude of lenders in order to garner the most competitive rates possible.</p>
+                    <strong><span></span>Is ELITE Finance a bank?</strong>
+                    <p>ELITE Finance is not a financial institution (bank), nor do we work for the bank. We work for you! We work closely with a multitude of lenders in order to garner the most competitive rates possible.</p>
                 </li>
                 <li>
                     <strong><span></span>How long will it take to get a customers application approved?</strong>
@@ -420,22 +420,22 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
                 </li>
                 <li>
                     <strong><span></span>How do I apply to become a partner?</strong>
-                    <p>Call 1-877-806-6247 or send an <a href="mailto:dealerrelations@lmgfinance.ca">email</a> to connect with a Dealer Relations representative.</p>
+                    <p>Call +270656352421 or send an <a href="mailto:eliteloangroup@gmail.com">email</a> to connect with a Dealer Relations representative.</p>
                 </li>
                 <li>
                     <strong><span></span>Will I be able to track my deals in real time?</strong>
-                    <p>Yes, as an LMG Finance affiliated dealership you will gain access to our Dealer Resource Centre allowing you to do so. You will also be able to track your deals in real time using the LMG Finance mobile app.</p>
+                    <p>Yes, as an ELITE Finance affiliated dealership you will gain access to our Dealer Resource Centre allowing you to do so. You will also be able to track your deals in real time using the LMG Finance mobile app.</p>
                 </li>
                 <li>
                     <strong><span></span>Will my salespeople be able to track their performance?</strong>
-                    <p>Yes, through our Dealer Resource Centre, as well as with the LMG Finance mobile app.</p>
+                    <p>Yes, through our Dealer Resource Centre, as well as with the ELITE Finance mobile app.</p>
                 </li>
                 <li>
                     <strong><span></span>Will my customers have access to the latest finance promotions and credit and service protection?</strong>
                     <p>Absolutely. With our extensive network of leading lenders, we're able to facilitate the most competitive financing packages available, including those that are limited time promotions.</p>
                 </li>
                 <li>
-                    <strong><span></span>Will LMG Finance help me promote competitive financing?</strong>
+                    <strong><span></span>Will ELITE Finance help me promote competitive financing?</strong>
                     <p>Our dealership partners receive cutting edge marketing materials to promote competitive financing. The materials can be ordered at any time using the Dealer Resource Centre access or by making the request through e-mail or a phone call.</p>
                 </li>
             </ul>
@@ -450,7 +450,7 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <!--footer-->
 <footer>
     <div class="container">
-        <p class="wow fadeInUp">Copyright &copy; <em id="copyright-year"></em> <span>|</span>LMG Finance Inc. All Rights Reserved. <span>|</span> <a href="privacy.html">Privacy Policy</a></p>
+        <p class="wow fadeInUp">Copyright &copy; <em id="copyright-year"></em> <span>|</span>ELITE Finance Inc. All Rights Reserved. <span>|</span> <a href="privacy.html">Privacy Policy</a></p>
     </div>
   <!-- {%FOOTER_LINK} -->
 </footer>
