--- a/lmg-finance-rv.html
+++ b/lmg-finance-rv.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.lmgfinance.ca/lmg-finance-rv.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Apr 2019 22:35:05 GMT -->
 <head>
-<title>RV Dealership Financing with LMG Finance</title>
+<title>RV Dealership Financing with ELITE Finance</title>
 <meta charset="utf-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
